--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyPDAM</string>
+    <string name="costumer_number">Costumer Number</string>
+    <string name="period">Period</string>
+    <string name="number_placeholder">Input customer number</string>
+    <string name="select_month">Select month</string>
+    <string name="check_button">Check</string>
 </resources>
