--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,14 @@
     <string name="number_placeholder">Input customer number</string>
     <string name="select_month">Select month</string>
     <string name="check_button">Check</string>
+    <string name="input_invalid">input cannot be empty</string>
+    <string name="dialog_title">Bill Details</string>
+    <string name="month">Month</string>
+    <string name="water_usage">Water Usage</string>
+    <string name="price_per_m3">Price per m³</string>
+    <string name="water_cost">Water Cost</string>
+    <string name="admin_fee">Admin Fee</string>
+    <string name="total_bill">Total Bill</string>
+    <string name="close">Close</string>
+
 </resources>
