Membuat navigasi dengan tombol Up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="close">Close</string>
     <string name="pay">Pay</string>
     <string name="about">About</string>
+    <string name="back">Back</string>
     <string name="about_heading">PDAM water payment information</string>
     <string name="copyright">MyPDAM is a mobile application that makes it easy for
         customers to access their PDAM water bill informationquickly, conveniently,
