Membuat navigasi ke app lain(implicit intent)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,10 @@
     <string name="pay">Pay</string>
     <string name="about">About</string>
     <string name="back">Back</string>
+    <string name="share">Share</string>
+    <string name="share_template">Customer name: %1$s \nCustomer number: %2$s \nMonth: %3$s
+    \n\nWater usage: %4$s m3\nPrice per m3: Rp.%5$s \nWater cost: Rp.%6$s \nAdmin fee: Rp.%7$s
+    \n\nTotal bill: Rp.%8$s</string>
     <string name="about_heading">PDAM water payment information</string>
     <string name="copyright">MyPDAM is a mobile application that makes it easy for
         customers to access their PDAM water bill informationquickly, conveniently,
@@ -27,5 +31,6 @@
 
         - water usage fee = IDR 3,000 per m³
         - administration fee = IDR 2,500</string>
+
 
 </resources>
